--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "recoil": "0.7.3-alpha.2"
   },
   "devDependencies": {
+    "@arco-plugins/vite-plugin-svgr": "^0.7.2",
     "@arco-plugins/vite-react": "^1.1.0",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
